# aptos-core

./: Cargo.toml
.github/workflows/: cargo-metadata-upload.yaml  docker-build-test.yaml  lint-test.yaml
api/goldens/: aptos_api__tests__accounts_test__test_get_account_resources_by_invalid_address_missing_0x_prefix.json  aptos_api__tests__invalid_post_request_test__test_invalid_entry_function_argument_address_string.json
api/src/tests/: accounts_test.rs  invalid_post_request_test.rs  state_test.rs
api/types/src/: address.rs
aptos-move/aptos-aggregator/src/: delta_change_set.rs
aptos-move/aptos-vm-logging/src/: lib.rs
aptos-move/aptos-vm-types/src/: storage.rs
aptos-move/aptos-vm/src/: aptos_vm.rs
aptos-move/block-executor/: Cargo.toml
aptos-move/block-executor/src/: executor.rs  executor_common.rs  lib.rs  view.rs
aptos-move/mvhashmap/src/: types.rs  versioned_aggregators.rs
aptos-node/src/: lib.rs  storage.rs
config/src/config/: mempool_config.rs  state_sync_config.rs
consensus/src/: logging.rs
consensus/src/experimental/: buffer_manager.rs
crates/aptos/: Cargo.toml
crates/aptos-abi/: Cargo.toml
crates/aptos/e2e/: main.py
dashboards/: execution.json  system.json
developer-docs-site/: sidebars.js
developer-docs-site/docs/move/: move-on-aptos.md
developer-docs-site/scripts/: additional_dict.txt
docker/builder/: docker-bake-rust-all.hcl
execution/executor-benchmark/: Cargo.toml
scripts/: dev_setup.sh
testsuite/: single_node_performance.py
tools/x/: Cargo.toml
types/src/: proptest_types.rs  validator_verifier.rs
(+90 files in other folders)
